// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DividerLine /> should match the snapshot 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6w useBoxStyles_backgroundColours_shine__3xgq1lev DividerLine_size_horizontal_2__k1y61r1"
/>
`;

exports[`<DividerLine /> should match the snapshot as vertical 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5s useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l80 useBoxStyles_backgroundColours_shine__3xgq1lev DividerLine_size_vertical_2__k1y61r4"
/>
`;
